committing changes to residences

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Sidebar
       <li ><a href="courses">Courses</a>
       </li>
 
-      <li ><a href="housing">Housing</a>
+      <li ><a href="residences">Residences</a>
       </li>
 
       <li ><a href="dining">Dining</a>
